array.island.Island.scala.error
Erreur de compilation :
Island:6: error: identifier expected but integer literal found.
  for (k <- 0 to n-2) if (num[k] <= num[k+1]) i += 1;
                                          ^Island:9: error: ']' expected but '}' found.
} 
^